# law-listener

./: .gitignore  README.md  SELF_HOSTING.md  deno.json  package.json  pnpm-lock.yaml  populate_laws.py
.cursor/rules/: law-domain.md  project-core.md  rust-worker.md
.github/workflows/: deploy-edge-functions.yml  deploy-migrations.yml  deploy-workers.yml  frontend-ci.yml  observability-ci.yml  workers-ci.yml
apps/web/: README.md  env.local  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.component.config.ts  vitest.unit.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/lib/: constants.ts  enforcement.ts  env.ts  pagination.ts  query.ts  server-env.ts  supabase-server.ts  types.ts  utils.ts
stortinget-law-matcher/: Cargo.toml  wrangler.toml
stortinget-law-matcher/src/: lib.rs
stortinget-rss-worker/: Cargo.toml  wrangler.toml
stortinget-rss-worker/src/: lib.rs
supabase/: config.toml
supabase/functions/generate-proposal-summary/: deno.json  index.ts  summary.ts  summary_test.ts
supabase/functions/ingest-stortinget/: index.ts
supabase/migrations/: 20251219193000_init_schema.sql  20260213120000_proposal_summaries.sql  20260213143000_proposal_summaries_rls.sql
workers/: README.md
workers/stortinget-law-matcher/: Cargo.toml
workers/stortinget-law-matcher/src/: lib.rs
workers/stortinget-law-matcher/src/fixtures/enforcement/: exact_date.txt  kongen.txt  multi.txt  no_match.txt  straks.txt
workers/stortinget-rss-worker/: Cargo.toml  wrangler.toml
workers/stortinget-rss-worker/src/: lib.rs
(+26 files in other folders)
