[package]
name = "stortinget-law-matcher"
version = "0.1.0"
edition = "2021"
authors = ["Ole Remi Dahl <olerd@stud.ntnu.no>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
worker = { version = "0.7", features = ['http'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html2text = "0.12"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-web = "0.1"
