[package]
name = "stortinget-rss-worker"
version = "0.1.0"
edition = "2021"
authors = ["Ole Remi Dahl <olerd@stud.ntnu.no>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-web = "0.1"
